Fix the use of dropTarget in renameCollection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.6.4, 3.7.3
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • v3.6
    • Storage 2018-02-12, Storage NYC 2018-03-12
    • 4
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      1. renameCollection dropTarget doesn't use dropTarget UUID
      renameCollection uses the namespace of the target collection, even when an oplog entry provides the correct UUID to drop. During initial sync it is possible that the target collection (by name) in the target database is not actually the collection that was dropped, and the UUID is required. This leads to dropping the wrong collection. During oplog application with UUIDs we should always drop the UUID mentioned if provided and never drop any other UUID.
      2. Rename collection with dropTarget should drop the target even if the source doesn't exist

            Assignee:
            Xiangyu Yao (Inactive)
            Reporter:
            Judah Schvimer
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: