SERVER-33087 Fix the use of dropTarget in renameCollection