src/mongo/db/catalog/rename_collection_test.cpp
@@ -290,6 +290,15 @@ CollectionOptions _makeCollectionOptionsWithUuid() {
 }
 
 /**
+ * Creates a collection with UUID and returns the UUID.
+ */
+CollectionUUID _createCollectionWithUUID(OperationContext* opCtx, const NamespaceString& nss) {
+    const auto options = _makeCollectionOptionsWithUuid();
+    _createCollection(opCtx, nss, options);
+    return options.uuid.get();
+}
+
+/**
  * Returns true if collection exists.
  */
 bool _collectionExists(OperationContext* opCtx, const NamespaceString& nss) {
@@ -315,6 +324,14 @@ CollectionUUID _getCollectionUuid(OperationContext* opCtx, const NamespaceString
     auto options = _getCollectionOptions(opCtx, nss);
     ASSERT_TRUE(options.uuid);
     return *(options.uuid);
+}
+
+/**
+ * Get collection namespace by UUID.
+ */
+NamespaceString _getCollectionNssFromUUID(OperationContext* opCtx, const UUID& uuid) {
+    Collection* source = UUIDCatalog::get(opCtx).lookupCollectionByUUID(uuid);
+    return source ? source->ns() : NamespaceString();
 }
 
 /**
@@ -499,12 +516,9 @@ TEST_F(RenameCollectionTest, RenameCollectionForApplyOpsAcrossDatabaseWithTarget
 }
 
 TEST_F(RenameCollectionTest, RenameCollectionToItselfByNsForApplyOps) {
-    _createCollection(_opCtx.get(), _sourceNss);
     auto dbName = _sourceNss.db().toString();
-    AutoGetDb autoDb(_opCtx.get(), dbName, MODE_X);
-    auto db = autoDb.getDb();
-    auto uuid = db->getCollection(_opCtx.get(), _sourceNss)->uuid();
-    auto uuidDoc = BSON("ui" << uuid.get());
+    auto uuid = _createCollectionWithUUID(_opCtx.get(), _sourceNss);
+    auto uuidDoc = BSON("ui" << uuid);
     auto cmd = BSON("renameCollection" << _sourceNss.ns() << "to" << _sourceNss.ns() << "dropTarget"
                                        << true);
     ASSERT_OK(renameCollectionForApplyOps(_opCtx.get(), dbName, uuidDoc["ui"], cmd, {}));
@@ -512,12 +526,9 @@ TEST_F(RenameCollectionTest, RenameCollectionToItselfByNsForApplyOps) {
 }
 
 TEST_F(RenameCollectionTest, RenameCollectionToItselfByUUIDForApplyOps) {
-    _createCollection(_opCtx.get(), _targetNss);
     auto dbName = _targetNss.db().toString();
-    AutoGetDb autoDb(_opCtx.get(), dbName, MODE_X);
-    auto db = autoDb.getDb();
-    auto uuid = db->getCollection(_opCtx.get(), _targetNss)->uuid();
-    auto uuidDoc = BSON("ui" << uuid.get());
+    auto uuid = _createCollectionWithUUID(_opCtx.get(), _targetNss);
+    auto uuidDoc = BSON("ui" << uuid);
     auto cmd = BSON("renameCollection" << _sourceNss.ns() << "to" << _targetNss.ns() << "dropTarget"
                                        << true);
     ASSERT_OK(renameCollectionForApplyOps(_opCtx.get(), dbName, uuidDoc["ui"], cmd, {}));
@@ -526,16 +537,117 @@ TEST_F(RenameCollectionTest, RenameCollectionToItselfByUUIDForApplyOps) {
 
 TEST_F(RenameCollectionTest, RenameCollectionByUUIDRatherThanNsForApplyOps) {
     auto realRenameFromNss = NamespaceString("test.bar2");
-    _createCollection(_opCtx.get(), realRenameFromNss);
     auto dbName = realRenameFromNss.db().toString();
-    AutoGetDb autoDb(_opCtx.get(), dbName, MODE_X);
-    auto db = autoDb.getDb();
-    auto uuid = db->getCollection(_opCtx.get(), realRenameFromNss)->uuid();
-    auto uuidDoc = BSON("ui" << uuid.get());
+    auto uuid = _createCollectionWithUUID(_opCtx.get(), realRenameFromNss);
+    auto uuidDoc = BSON("ui" << uuid);
     auto cmd = BSON("renameCollection" << _sourceNss.ns() << "to" << _targetNss.ns() << "dropTarget"
                                        << true);
     ASSERT_OK(renameCollectionForApplyOps(_opCtx.get(), dbName, uuidDoc["ui"], cmd, {}));
     ASSERT_TRUE(_collectionExists(_opCtx.get(), _targetNss));
+}
+
+TEST_F(RenameCollectionTest, RenameCollectionForApplyOpsDropTargetByUUIDTargetDoesNotExist) {
+    const auto& collA = NamespaceString("test.A");
+    const auto& collB = NamespaceString("test.B");
+    const auto& collC = NamespaceString("test.C");
+    auto dbName = collA.db().toString();
+    auto collAUUID = _createCollectionWithUUID(_opCtx.get(), collA);
+    auto collCUUID = _createCollectionWithUUID(_opCtx.get(), collC);
+    auto uuidDoc = BSON("ui" << collAUUID);
+    // Rename A to B, drop C, where B is not an existing collection
+    auto cmd =
+        BSON("renameCollection" << collA.ns() << "to" << collB.ns() << "dropTarget" << collCUUID);
+    ASSERT_OK(renameCollectionForApplyOps(_opCtx.get(), dbName, uuidDoc["ui"], cmd, {}));
+    // A and C should be dropped
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), collA));
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), collC));
+    // B (originally A) should exist
+    ASSERT_TRUE(_collectionExists(_opCtx.get(), collB));
+}
+
+TEST_F(RenameCollectionTest, RenameCollectionForApplyOpsDropTargetByUUIDTargetExists) {
+    const auto& collA = NamespaceString("test.A");
+    const auto& collB = NamespaceString("test.B");
+    const auto& collC = NamespaceString("test.C");
+    auto dbName = collA.db().toString();
+    auto collAUUID = _createCollectionWithUUID(_opCtx.get(), collA);
+    auto collBUUID = _createCollectionWithUUID(_opCtx.get(), collB);
+    auto collCUUID = _createCollectionWithUUID(_opCtx.get(), collC);
+    auto uuidDoc = BSON("ui" << collAUUID);
+    // Rename A to B, drop C, where B is an existing collection
+    // B should be kept but with a temporary name
+    auto cmd =
+        BSON("renameCollection" << collA.ns() << "to" << collB.ns() << "dropTarget" << collCUUID);
+    ASSERT_OK(renameCollectionForApplyOps(_opCtx.get(), dbName, uuidDoc["ui"], cmd, {}));
+    // A and C should be dropped
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), collA));
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), collC));
+    // B (originally A) should exist
+    ASSERT_TRUE(_collectionExists(_opCtx.get(), collB));
+    // The original B should exist too, but with a temporary name
+    const auto& tmpB = UUIDCatalog::get(_opCtx.get()).lookupNSSByUUID(collBUUID);
+    ASSERT_FALSE(tmpB.isEmpty());
+    ASSERT_TRUE(tmpB.coll().startsWith("tmp"));
+    ASSERT_TRUE(tmpB != collB);
+}
+
+TEST_F(RenameCollectionTest,
+       RenameCollectionForApplyOpsDropTargetByUUIDTargetExistsButTemporarily) {
+
+    const auto& collA = NamespaceString("test.A");
+    const auto& collB = NamespaceString("test.B");
+    const auto& collC = NamespaceString("test.C");
+
+    CollectionOptions collectionOptions = _makeCollectionOptionsWithUuid();
+    collectionOptions.temp = true;
+    _createCollection(_opCtx.get(), collB, collectionOptions);
+    auto collBUUID = _getCollectionUuid(_opCtx.get(), collB);
+
+    auto dbName = collA.db().toString();
+    auto collAUUID = _createCollectionWithUUID(_opCtx.get(), collA);
+    auto collCUUID = _createCollectionWithUUID(_opCtx.get(), collC);
+    auto uuidDoc = BSON("ui" << collAUUID);
+    // Rename A to B, drop C, where B is an existing collection
+    // B should be kept but with a temporary name
+    auto cmd =
+        BSON("renameCollection" << collA.ns() << "to" << collB.ns() << "dropTarget" << collCUUID);
+    ASSERT_OK(renameCollectionForApplyOps(_opCtx.get(), dbName, uuidDoc["ui"], cmd, {}));
+    // A and C should be dropped
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), collA));
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), collC));
+    // B (originally A) should exist
+    ASSERT_TRUE(_collectionExists(_opCtx.get(), collB));
+    // The original B should exist too, but with a temporary name
+    const auto& tmpB = UUIDCatalog::get(_opCtx.get()).lookupNSSByUUID(collBUUID);
+    ASSERT_FALSE(tmpB.isEmpty());
+    ASSERT_TRUE(tmpB != collB);
+    ASSERT_TRUE(tmpB.coll().startsWith("tmp"));
+    ASSERT_TRUE(_isTempCollection(_opCtx.get(), tmpB));
+}
+
+TEST_F(RenameCollectionTest,
+       RenameCollectionForApplyOpsDropTargetByUUIDTargetExistsButRealDropTargetDoesNotExist) {
+    const auto& collA = NamespaceString("test.A");
+    const auto& collB = NamespaceString("test.B");
+    auto dbName = collA.db().toString();
+    auto collAUUID = _createCollectionWithUUID(_opCtx.get(), collA);
+    auto collBUUID = _createCollectionWithUUID(_opCtx.get(), collB);
+    auto collCUUID = UUID::gen();
+    auto uuidDoc = BSON("ui" << collAUUID);
+    // Rename A to B, drop C, where B is an existing collection
+    // B should be kept but with a temporary name
+    auto cmd =
+        BSON("renameCollection" << collA.ns() << "to" << collB.ns() << "dropTarget" << collCUUID);
+    ASSERT_OK(renameCollectionForApplyOps(_opCtx.get(), dbName, uuidDoc["ui"], cmd, {}));
+    // A and C should be dropped
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), collA));
+    // B (originally A) should exist
+    ASSERT_TRUE(_collectionExists(_opCtx.get(), collB));
+    // The original B should exist too, but with a temporary name
+    const auto& tmpB = UUIDCatalog::get(_opCtx.get()).lookupNSSByUUID(collBUUID);
+    ASSERT_FALSE(tmpB.isEmpty());
+    ASSERT_TRUE(tmpB != collB);
+    ASSERT_TRUE(tmpB.coll().startsWith("tmp"));
 }
 
 TEST_F(RenameCollectionTest,
@@ -620,6 +732,92 @@ DEATH_TEST_F(RenameCollectionTest,
 
     repl::OpTime renameOpTime = {Timestamp(Seconds(200), 1U), 1LL};
     ASSERT_OK(renameCollectionForApplyOps(_opCtx.get(), dbName, {}, cmd, renameOpTime));
+}
+
+TEST_F(RenameCollectionTest, RenameCollectionForApplyOpsSourceAndTargetDoNotExist) {
+    auto uuidDoc = BSON("ui" << UUID::gen());
+    auto cmd = BSON("renameCollection" << _sourceNss.ns() << "to" << _targetNss.ns() << "dropTarget"
+                                       << "true");
+    ASSERT_EQUALS(ErrorCodes::NamespaceNotFound,
+                  renameCollectionForApplyOps(
+                      _opCtx.get(), _sourceNss.db().toString(), uuidDoc["ui"], cmd, {}));
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), _sourceNss));
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), _targetNss));
+}
+
+TEST_F(RenameCollectionTest, RenameCollectionForApplyOpsDropTargetEvenIfSourceDoesNotExist) {
+    _createCollectionWithUUID(_opCtx.get(), _targetNss);
+    auto missingSourceNss = NamespaceString("test.bar2");
+    auto uuidDoc = BSON("ui" << UUID::gen());
+    auto cmd =
+        BSON("renameCollection" << missingSourceNss.ns() << "to" << _targetNss.ns() << "dropTarget"
+                                << "true");
+    ASSERT_OK(renameCollectionForApplyOps(
+        _opCtx.get(), missingSourceNss.db().toString(), uuidDoc["ui"], cmd, {}));
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), _targetNss));
+}
+
+TEST_F(RenameCollectionTest, RenameCollectionForApplyOpsDropTargetByUUIDEvenIfSourceDoesNotExist) {
+    auto missingSourceNss = NamespaceString("test.bar2");
+    auto dropTargetNss = NamespaceString("test.bar3");
+    _createCollectionWithUUID(_opCtx.get(), _targetNss);
+    auto dropTargetUUID = _createCollectionWithUUID(_opCtx.get(), dropTargetNss);
+    auto uuidDoc = BSON("ui" << UUID::gen());
+    auto cmd =
+        BSON("renameCollection" << missingSourceNss.ns() << "to" << _targetNss.ns() << "dropTarget"
+                                << dropTargetUUID);
+    ASSERT_OK(renameCollectionForApplyOps(
+        _opCtx.get(), missingSourceNss.db().toString(), uuidDoc["ui"], cmd, {}));
+    ASSERT_TRUE(_collectionExists(_opCtx.get(), _targetNss));
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), dropTargetNss));
+}
+
+TEST_F(RenameCollectionTest, RenameCollectionForApplyOpsDropTargetEvenIfSourceIsDropPending) {
+    repl::OpTime dropOpTime(Timestamp(Seconds(100), 0), 1LL);
+    auto dropPendingNss = _sourceNss.makeDropPendingNamespace(dropOpTime);
+
+    auto dropTargetUUID = _createCollectionWithUUID(_opCtx.get(), _targetNss);
+    auto uuidDoc = BSON("ui" << _createCollectionWithUUID(_opCtx.get(), dropPendingNss));
+    auto cmd =
+        BSON("renameCollection" << dropPendingNss.ns() << "to" << _targetNss.ns() << "dropTarget"
+                                << "true");
+
+    repl::UnreplicatedWritesBlock uwb(_opCtx.get());
+    repl::OpTime renameOpTime = {Timestamp(Seconds(200), 1U), 1LL};
+    ASSERT_OK(renameCollectionForApplyOps(
+        _opCtx.get(), dropPendingNss.db().toString(), uuidDoc["ui"], cmd, renameOpTime));
+
+    // Source collections stays in drop-pending state.
+    ASSERT_TRUE(_collectionExists(_opCtx.get(), dropPendingNss));
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), _targetNss));
+    ASSERT_EQUALS(_targetNss.makeDropPendingNamespace(renameOpTime),
+                  _getCollectionNssFromUUID(_opCtx.get(), dropTargetUUID));
+}
+
+TEST_F(RenameCollectionTest, RenameCollectionForApplyOpsDropTargetByUUIDEvenIfSourceIsDropPending) {
+    repl::OpTime dropOpTime(Timestamp(Seconds(100), 0), 1LL);
+    auto dropPendingNss = _sourceNss.makeDropPendingNamespace(dropOpTime);
+    auto dropTargetNss = NamespaceString("test.bar2");
+
+    _createCollectionWithUUID(_opCtx.get(), _targetNss);
+
+    auto dropTargetUUID = _createCollectionWithUUID(_opCtx.get(), dropTargetNss);
+    auto uuidDoc = BSON("ui" << _createCollectionWithUUID(_opCtx.get(), dropPendingNss));
+    auto cmd =
+        BSON("renameCollection" << dropPendingNss.ns() << "to" << _targetNss.ns() << "dropTarget"
+                                << dropTargetUUID);
+
+    repl::UnreplicatedWritesBlock uwb(_opCtx.get());
+    repl::OpTime renameOpTime = {Timestamp(Seconds(200), 1U), 1LL};
+    ASSERT_OK(renameCollectionForApplyOps(
+        _opCtx.get(), dropPendingNss.db().toString(), uuidDoc["ui"], cmd, renameOpTime));
+
+    // Source collections stays in drop-pending state.
+    ASSERT_TRUE(_collectionExists(_opCtx.get(), dropPendingNss));
+    ASSERT_FALSE(_collectionExists(_opCtx.get(), dropTargetNss));
+    ASSERT_EQUALS(dropTargetNss.makeDropPendingNamespace(renameOpTime),
+                  _getCollectionNssFromUUID(_opCtx.get(), dropTargetUUID));
+    ASSERT_TRUE(_collectionExists(_opCtx.get(), _targetNss));
 }
 
 void _testRenameCollectionStayTemp(OperationContext* opCtx,
